# livestack

./: .gitignore  20231215160000_create_zz_job_relation_rec_table.js  Cargo.toml  Comparison.md  HARMONY.md  LICENSE  README.md  build-all.sh  build_for_prod.sh  build_for_prod_vault_only.sh  draft.md  first-time-repo-init.sh  lerna.json  package-lock.json  package.json  prepare_dev_for_example_app.sh  publish_for_example_app.sh  pyproject.toml  tsconfig.json  typedoc.json  update_subfolder_package_json.js  update_subfolder_package_json_vault_only.js  update_submodule_package_json.js
_plans/: fleet-scheduler.md  (+3 more)
crosslang/shared/: Cargo.toml
crosslang/shared/.cargo/: config.toml
crosslang/shared/src/systems/: def_graph.rs  def_graph_utils.rs  instantiated_graph.rs  mod.rs  system_a.rs
crosslang/shared/tests/: def_graph_tests.rs  instantiated_graph_test.rs
node-py/: .gitignore  README.md  pyproject.toml
node-py/livestack_node/: __init__.py  client.py  coordinator.py  facade.py  fleet_dispatch.py  fleet_scheduler.py  freeing.py  hostbroker.py  hostd.py  lease.py  manager.py  measure.py  meters.py  planner.py  provision.py  provision_runpod.py  residence.py  runtime.py  serve.py
node-py/tests/: test_client.py  test_coordinator.py  test_facade.py  test_federation.py  test_fleet_dispatch.py  test_fleet_scheduler.py  test_hostbroker.py  test_lease.py  test_local_parity.py  test_manager.py  test_measure.py  test_planner.py  test_provision.py  test_residence.py
shared/: .gitignore  Cargo.toml  README.md  ZZJobSpecBase.ts  gateway-binding-types.ts  input-output.ts  package.json  tsconfig.json
shared/.cargo/: config.toml
shared/src/: IOSpec.ts  StreamDefSet.ts  gateway-binding-types.ts  genPromiseCycle.ts  index.ts  lib.rs  lruCacheFn.ts  residency.rs  std-utils.ts
shared/src/client-server/: interface.ts
shared/src/graph/: DefGraph.test.ts  DefGraph.ts  InstantiatedGraph.test.ts  InstantiatedGraph.ts  dummy.test.ts
shared/src/graph/wasm/: livestack_shared_wasm.d.ts  livestack_shared_wasm.js  livestack_shared_wasm_bg.wasm  livestack_shared_wasm_bg.wasm.d.ts  livestack_shared_wasm_nodejs.d.ts  livestack_shared_wasm_nodejs.js  livestack_shared_wasm_nodejs_bg.wasm  livestack_shared_wasm_nodejs_bg.wasm.d.ts  package.json
shared/src/graph_wasm/: livestack_shared_wasm.d.ts  livestack_shared_wasm_bg.js  livestack_shared_wasm_bg.wasm  livestack_shared_wasm_nodejs.d.ts  livestack_shared_wasm_nodejs_bg.wasm
shared/src/storage/: constants.ts
shared/src/systems/: def_graph.rs  def_graph_utils.rs  instantiated_graph.rs  mod.rs
shared/tests/: def_graph_tests.rs  instantiated_graph_test.rs
vault-interface/: .gitignore  Cargo.toml  build.rs  build_proto.bash  package.json  tsconfig.json
vault-interface/proto/: capacity.proto  db.proto  queue.proto  stream.proto
vault-interface/src/: index.ts  lib.rs  types.ts  wrapNullResponse.ts
(+502 files in other folders)
