[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polycore"
version = "0.1.0"
description = "Zero-dependency model-residency seam shared by polyasr & polytts (the Coordinator interface livestack adapts to)."
requires-python = ">=3.10"
dependencies = []   # ZERO runtime deps — backend imports (torch/mlx) are lazy + optional.

[project.optional-dependencies]
test = []           # tests use stdlib unittest only.

[tool.setuptools.packages.find]
include = ["polycore*"]
