[package]
name = "livestack-shared"
version = "0.1.0"
authors = ["Your Name Here"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.1"


[dev-dependencies]
assert_matches = "1.5.0"
