[package]
name = "livestack-vault-interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16", default-features = false, features = ["napi4",
"tokio_rt",
  "serde-json",
  "latin1",
  "compat-mode",
  "async"
] }
napi-derive = "2.16"


[build-dependencies]
tonic-build = "0.11"
napi-build = "2.1"

[profile.release]
lto = true
strip = "symbols"
