[package]
name = "livestack-shared"
version = "0.1.0"
authors = ["Your Name Here"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.1"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"


[dev-dependencies]
assert_matches = "1.5.0"
